# thuisbezorgd-web-scraping

./: README.md  __main__.py  cuisines.py  pyproject.toml  thuisbezordg_helper.py  thuisbezorgd.py  thuisbezorgd_automation.py  thuisbezorgd_db.py
tests/: conftest.py  test_thuisbezorgd_db.py
