[tool.poetry]
name = "thuisbezorgd-web-scraping"
version = "0.1.0"
description = "Simple Web Scraping Presentation Created in Python"
authors = ["jeff73511 <jeff73511@msn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
undetected-chromedriver = "^3.4.6"
termcolor = "^2.2.0"
SQLAlchemy = "^2.0.9"
pandas = "^2.0.1"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
